--- a/agile-frontend/build.xml
+++ b/agile-frontend/build.xml
@@ -79,12 +79,20 @@
         <!--Copy static content to target -->
         <copy todir="${TARGET_DIR}/${ant.project.name}.war">
               <fileset dir="WebContent">
-                <exclude name="flatfull/tpl/**/*"/>
+                 <exclude name="flatfull/tpl/**/*"/>
+                <!-- Exclude page builder unwanted files -->
                 <exclude name="flatfull/controllers/**/*"/>
                 <exclude name="flatfull/jscore/**/*"/>
                 <exclude name="misc/pagebuilder/source/**/*"/>
                 <exclude name="misc/landingpage/source/**/*"/>
                 <exclude name="misc/formbuilder/assets/**/*"/>
+                <!-- Exclude campaign unwanted files -->
+                <exclude name="locales/locales/**/*.png"/>
+                <exclude name="locales/locales/**/nodes/*.jpg"/>
+                <exclude name="flatfull/img/campaings/*"/>
+                <exclude name="flatfull/images/draw2d/*"/>
+                <exclude name="flatfull/misc/formbuilder/*"/>
+                <exclude name="misc/*"/>
             </fileset>
         </copy>
         <copy todir="${TARGET_DIR}/${ant.project.name}.war/misc/pagebuilder/source/build">
