--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fancybox": "^3.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "rxjs": "^5.5.2",
     "wowjs": "^1.1.3",
     "zone.js": "^0.8.14"
